schema/testdata/validation_reserved_action_name_reset_password/schema.keel
model User {
    fields {
        email Text
    }

    operations {
        create resetPassword() with (email)
    }
}

api Web {
    models {
        User
    }
}
