schema/testdata/errors/reserved_action_name_reset_password_function.keel
model User {
    fields {
        email Text
    }

    actions {
        //expect-error:16:29:NamingError:There already exists a reserved action with the name 'resetPassword'
        create resetPassword() with (email)
    }
}

api Web {
    models {
        User
    }
}
